--- a/src/components/Destinations.css
+++ b/src/components/Destinations.css
@@ -23,7 +23,7 @@
 
 .tour-card {
   position: relative;
-  width: 200px;
+  width: 12.5rem;
   margin: 10px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -32,7 +32,7 @@
 
 .tour-image {
   width: 100%;
-  height: 200px;
+  height: 15.6rem;
   object-fit: cover;
   border-radius: 8px;
 }
