--- a/src/components/aboutus/Aboutus.css
+++ b/src/components/aboutus/Aboutus.css
@@ -12,10 +12,17 @@ p{
 .content{
     padding: 0px 10%;
 }
+.aboutusImage{
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
 
 
 .Aboutustext{
     width: 50%;
+    position: relative;
+    top: 15vh;
+    
+    
 }
 
 
@@ -49,7 +56,7 @@ h3{
 }
 .blue{
     position: relative;
-    top: 35px;
+    top: 5px;
     text-align: left;
     color: orange;
     font-family: 'Geologica', sans-serif;
