--- a/src/components/aboutus/Aboutus.css
+++ b/src/components/aboutus/Aboutus.css
@@ -14,6 +14,7 @@ p{
 }
 .aboutusImage{
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    margin-top: 50px;
 }
 
 
@@ -23,6 +24,9 @@ p{
     top: 15vh;
     
     
+}
+.Aboutustext p {
+    padding-bottom: 10px;
 }
 
 
@@ -58,6 +62,6 @@ h3{
     position: relative;
     top: 5px;
     text-align: left;
-    color: orange;
+    color: #4caf50;
     font-family: 'Geologica', sans-serif;
 }
