--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,7 +2,7 @@
   background-color: rgb(234, 243, 250);
   /* height: 27rem; */
   padding: 20px;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
   color: #888;
 }
 
